removed the final secure setting from the config and replace it with a new args system. the required name and key for storage can be passed via the command line or via a static arguments.json file in the bin directory. this keeps the secure stuff out of the repo so the source can be opened. args are parsed, checked and then passed down through the provider and preferences class...good enough for now and gets the job done.

--- a/TFSChanges/TFSChanges.csproj
+++ b/TFSChanges/TFSChanges.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Args">
+      <HintPath>..\packages\Args.1.1.1\lib\Net40\Args.dll</HintPath>
+    </Reference>
     <Reference Include="AutoMapper">
       <HintPath>..\packages\AutoMapper.3.1.0\lib\net40\AutoMapper.dll</HintPath>
     </Reference>
@@ -86,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HipChatProvider.cs" />
+    <Compile Include="Models\Arguments.cs" />
     <Compile Include="Models\TFSResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Models\TfsProject.cs" />
