--- a/TFSChanges/packages.config
+++ b/TFSChanges/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Args" version="1.1.1" targetFramework="net45" />
   <package id="AutoMapper" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.6" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.13" targetFramework="net45" />
