finer trace control and new liseners added a config trace switch and converted all trace writeline's to writelineif's checking the switch. added new eventlog filter to config. added more tracing for verbose option, including formatted response sent to providers.

--- a/TFSChanges/App.config
+++ b/TFSChanges/App.config
@@ -46,8 +46,18 @@
 	<system.diagnostics>
 		<trace autoflush="true" indentsize="2" useGlobalLock="false">
 			<listeners>
+				<clear/>
 				<add name="consoleListener" type="System.Diagnostics.ConsoleTraceListener" />
+				<add name="eventLogListener" />
 			</listeners>
 		</trace>
+		<sharedListeners>
+			<add name="eventLogListener" type="System.Diagnostics.EventLogTraceListener" initializeData="TFSChanges">
+				<filter type="System.Diagnostics.EventTypeFilter" initializeData="Error" />
+			</add>
+		</sharedListeners>
+		<switches>
+			<add name="levelSwitch" value="3" />
+		</switches>
 	</system.diagnostics>
 </configuration>
